Fixing footer spacing

--- a/assets/style/footer.less
+++ b/assets/style/footer.less
@@ -14,6 +14,7 @@ div#site-footer {
 
   ul {
     padding-left: 0;
+    margin:0;
   }
 
   & > footer {
